--- a/ConsoleApp1/App.config
+++ b/ConsoleApp1/App.config
@@ -12,6 +12,12 @@
       <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.21.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
     </DbProviderFactories>
   </system.data>
+  <connectionStrings>
+    <clear />
+    <add name="admsystem"
+     providerName="Oracle.ManagedDataAccess.Client"
+     connectionString="Data Source=development_esu8.world;Persist Security Info=True;User ID=admsystem;Password=*****;" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
