--- a/ConsoleApp1/ReportEngine.csproj
+++ b/ConsoleApp1/ReportEngine.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportGenerator.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
   <ItemGroup>
