--- a/ConsoleApp2/App.config
+++ b/ConsoleApp2/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <clear />
+    <add name="admsystem"
+     providerName="Oracle.ManagedDataAccess.Client"
+     connectionString="Data Source=development_esu8.world;Persist Security Info=True;User ID=admsystem;Password=*****;" />
+  </connectionStrings>
 </configuration>
